--- a/Main.html
+++ b/Main.html
@@ -40,7 +40,7 @@
             <a target="blank" href="https://www.instagram.com/atharvite_01?r=nametag" class="fab fa-instagram"></a>
             <a target="blank" href="https://www.linkedin.com/in/atharv-vani-56191520b" class="fab fa-linkedin"></a>
             <a target="blank" href="https://www.hackerrank.com/Atharv110" class="fab fa-hackerrank"></a>
-            <a target="blank" href="#"
+            <a target="blank" href="Badge.html"
                 class="fab fa-google"></a>
             <a target="blank" href="https://github.com/Atharv-110" class="fab fa-github"></a>
 
